--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
   <body>
     <section id="header">
       <a href="#"><img src="img/logo.png" class="logo" alt="" /></a>
-
+      <!-- <div class=""></div> -->
       <div>
         <ul id="navbar">
           <li><a href="index.html">Home</a></li>
