--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div>
         <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
+          <li><a href="shop.html" onclick="onClickHome">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -455,43 +455,6 @@
     <script src="script.js"></script>
 
     <script>
-      // window.Evergage = window.Evergage || [];
-      // window.Evergage.push(function (evergage) {
-      //   "use strict";
-
-      //   const pathname = window.location.pathname || "";
-      //   let pageName = "Page viewed: " + pathname;
-      //   let pageType = "other";
-
-      //   if (pathname === "/" || pathname.endsWith("index.html")) {
-      //     pageName = "Home page viewed";
-      //     pageType = "home";
-      //   } else if (pathname.includes("shop.html") || pathname === "/shop") {
-      //     pageName = "Shop page viewed";
-      //     pageType = "shop";
-      //   } else if (pathname.includes("cart.html") || pathname === "/cart") {
-      //     pageName = "Cart page viewed";
-      //     pageType = "cart";
-      //   } else if (
-      //     pathname.includes("sproduct.html") ||
-      //     pathname.includes("product")
-      //   ) {
-      //     pageName = "Product page viewed";
-      //     pageType = "product";
-      //   }
-
-      //   const payload = {
-      //     action: pageName,
-      //     attributes: {
-      //       pageType,
-      //       pathname,
-      //     },
-      //   };
-
-      //   evergage.sendEvent(payload);
-      //   console.log("Evergage event sent:", payload);
-      // });
-
       // 2. Cart Subtotal & Total Update (Keep this code, it's fine)
       document.addEventListener("DOMContentLoaded", () => {
         const updateCartSummary = () => {
@@ -514,6 +477,12 @@
         };
 
         updateCartSummary();
+
+        function onClickHome() {
+          if (window.Evergage) {
+            Evergage.trackEvent("homeClicked");
+          }
+        }
       });
     </script>
   </body>
