--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
       <div>
         <ul id="navbar">
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="shop.html" onclick="onClickHome">Shop</a></li>
+          <li>
+            <a class="active" href="index.html" onclick="onClickHome">Home</a>
+          </li>
+          <li><a href="shop.html">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -477,13 +479,12 @@
         };
 
         updateCartSummary();
-
-        function onClickHome() {
-          if (window.Evergage) {
-            Evergage.trackEvent("homeClicked");
-          }
-        }
       });
+      function onClickHome() {
+        if (window.Evergage) {
+          Evergage.sendEvent("homeClicked");
+        }
+      }
     </script>
   </body>
 </html>
